refactor: modify fetch image file endpoint
